consistent style for RZ

--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -13,6 +13,7 @@
 \newcommand{\tot}[1]{\|#1\|}
 \newcommand{\per}[1]{\approx_{#1}}
 \newcommand{\PL}{\mathcal{P}}
+\newcommand{\RZ}{RZ\xspace}
 \newcommand{\Mod}[1]{\mathsf{Mod}(#1)}
 \newcommand{\rz}{\Vdash}
 \newcommand{\note}[1]{\texttt{[#1]}}
@@ -77,7 +78,7 @@
 \newcommand{\PROPOSITION}{\keywd{proposition}}
 \newcommand{\PREDICATE}{\keywd{predicate}}
 \newcommand{\RELATION}{\keywd{relation}}
-\newcommand{\RZ}{\keywd{rz}}
+%\newcommand{\RZ}{\keywd{rz}}
 \newcommand{\SET}{\keywd{set}}
 \newcommand{\SOME}{\keywd{some}}
 \newcommand{\STABLE}{\keywd{stable}}
@@ -161,7 +162,7 @@
 \maketitle
 
 \begin{abstract}
-We present a system, called~\emph{RZ}, for automatic generation of
+We present a system, called~\RZ, for automatic generation of
 program specifications from mathematical theories. We translate
 mathematical theories to specifications by computing their
 realizability interpretations in an ML-like language augmented with
