--- a/trunk/doc/case/conclusion.tex
+++ b/trunk/doc/case/conclusion.tex
@@ -1,13 +1,13 @@
 \section{Conclusions and Future Work}
 \label{sec:conclusion}
 
-By translating only at the level of specifications, \emph{RZ} provides a
+By translating only at the level of specifications, \RZ provides a
 useful middle ground between ad-hoc implementations and
 machine-generated implementations --- allowing much more flexible
 implementation strategies, but relying on the programmer to
 verify properties of their code.
 
-Further, \emph{RZ} can serve as a means of explaining constructive
+Further, \RZ can serve as a means of explaining constructive
 mathematics to programmers.  Programmers who are not knowledgeable
 about constructive mathematics can still understand the output of the
 translation, which involves familiar concepts such as abstract types
