--- a/trunk/doc/case/theories_signatures.tex
+++ b/trunk/doc/case/theories_signatures.tex
@@ -151,7 +151,7 @@ of a theory.  We therefore generate signatures augmented by assertion
 comments, which specify constraints on the values and functions an
 implementation beyond their type.  It is the responsibility of the
 programmer to check that the implementation satisfies these
-assertions, as RZ does not attempt to do any theorem proving.
+assertions, as \RZ does not attempt to do any theorem proving.
 
 Assertions are written in ordinary classical first-order logic. Since
 programmers typically are not trained in constructive logic, this may
