*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -110,3 +110,12 @@ NUMBER=1,
 MONTH="January",
 YEAR=2003,
 KEY="Peyton Jones"}
+
+@Book{Troelstra:van-Dalen:88:1,
+  author = 	 {A.S. Troelstra and D. van Dalen},
+  title = 	 {Constructivism in Mathematics, An Introduction, Vol. 1},
+  publisher = 	 {North-Holland},
+  year = 	 {1988},
+  number = 	 {121},
+  series = 	 {Studies in Logic and the Foundations of Mathematics}
+}
