*** empty log message ***

--- a/trunk/doc/case/examples.tex
+++ b/trunk/doc/case/examples.tex
@@ -36,7 +36,7 @@ arguments, we could write a Halting Oracle.)
 \label{sec:natural-numb}
 
 Next we consider the theory of natural numbers. This example shows how
-axioms can be parametrized by theories. Recall that the natural
+axioms can be parameterized by theories. Recall that the natural
 numbers are the initial algebra with one constant and one unary
 operation (such algebras are sometimes called ``iteration algebras''):
 %
@@ -76,7 +76,7 @@ states that every total relation has a choice function:
   \forall x \in A .\, R(x, g(x)) \;.
 \end{multline*}
 %
-We could write this as a theory parametrized by sets $A$, $B$ and the
+We could write this as a theory parameterized by sets $A$, $B$ and the
 relation~$R$, but to keep things simple, we use the following version:
 %
 {\small\VerbatimInput{choice.thy}}%
