--- a/trunk/doc/case/realizability.tex
+++ b/trunk/doc/case/realizability.tex
@@ -5,7 +5,7 @@
 We briefly motivate the main idea of (typed) realizability. When we
 represent a set of mathematical objects~$S$ in a programming
 language~$\PL$ there are two natural steps to take: first choose an
-\emph{underlying datatype~$\ut{S}$} of representing values, and second
+\emph{underlying type~$\ut{S}$} of representing values, and second
 specify how the values of type~$\ut{S}$ represent, or \emph{realize},
 elements of the set~$S$. For example, consider how we might represent
 the set~$D$ of simple finite directed graphs (whose vertices are
