*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -119,3 +119,13 @@ KEY="Peyton Jones"}
   number = 	 {121},
   series = 	 {Studies in Logic and the Foundations of Mathematics}
 }
+
+@InProceedings{pfenning01:_inten_exten_proof_irrel_modal_type_theor,
+  author = 	 {F. Pfenning},
+  title = 	 {Intensionality, Extensionality, and Proof Irrelevance in Modal Type Theory},
+  booktitle = 	 {Proceedings of the 16th Annual IEEE Symposium on Logic in Computer Science (LICS'01)},
+  year =	 2001,
+  month =	 {June},
+  pages =        {221},
+  publisher =    {IEEE Computer Society}
+}
