--- a/trunk/doc/case/examples.tex
+++ b/trunk/doc/case/examples.tex
@@ -30,7 +30,7 @@ fact, there are many natural and important examples of non-computable partial
 equivalence relations, such as \emph{extensional equality} of functions
 from natural numbers to natural numbers. (If we could computably
 decide whether two functions always give equal results on equal
-arguments, we could write a Halting Oracle.)
+arguments, we could construct a Halting Oracle.)
 
 \paragraph{Natural Numbers.}
 \label{sec:natural-numb}
