--- a/trunk/doc/case/theories_signatures.tex
+++ b/trunk/doc/case/theories_signatures.tex
@@ -164,7 +164,7 @@ At the ML level we have required a type \Verb|s|, and three values
 \Verb|e|, \Verb|*|, and \Verb|sqrt|, of types \Verb|s|,
 \Verb|s->s->s|, and \Verb|s->s|, respectively. The third value was
 generated from the square root axiom, which has a non-trivial
-computational content.
+computational content, cf.\ Subsection~\ref{subsec:real-transl}.
 
 Comments contain other requirements, not expressible in ML, that
 further contstrain the allowed implementations. The assertion
