new rz directory for research papers

--- a/doc/refman/refman.tex
+++ b/doc/refman/refman.tex
@@ -627,10 +627,7 @@ Terms can be of the following forms:
 \includeexample{nat.thy}
 
 \clearpage
-\includeexample{semilattice.thy}
-
-\clearpage
-\includeexample{kuratowski2.thy}
+\includeexample{kuratowski.thy}
 Need to change brackets to parentheses
 
 \clearpage
